go-web-app-helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
  namespace: go-app-ns
spec:
  type: ClusterIP
  selector:
    app: go-app
  ports:
    - port: 80
      targetPort: 8080
